app/assets/stylesheets/sage/system/patterns/elements/_switch.scss
/* ==================================================
  ** _switch.scss
  type: element


================================================== */

.sage-switch {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  margin-bottom: $sage-form-element-spacing;
  color: $sage-switch-color-default-text;

  .sage-switch__input {
    display: inline-block;
    position: relative;
    height: $sage-switch-height;
    width: $sage-switch-width;
    margin: 0;
    vertical-align: top;
    appearance: none;
    color: $sage-switch-color-default;
    background: $sage-switch-color-default;
    border-radius: $sage-switch-border-radius;
    outline: none;
    transition: background 0.3s ease-out;
    cursor: pointer;

    + .sage-switch__label {
      display: inline-block;
      margin-left: sage-spacing(sm);
      vertical-align: top;
      cursor: pointer;

      @extend %t-sage-body;
    }

    &::before,
    &::after {
      content: "";
      display: block;
      position: absolute;
      left: 50%;
      top: 50%;
    }

    &::before { // switch background
      transform: translate3d(-50%, -50%, 0) scale(0.94);
      width: calc(100% + (#{$sage-switch-focus-outline-width * 1px} + #{$sage-switch-focus-outline-spacing * 2}));
      height: calc(100% + (#{$sage-switch-focus-outline-width * 1px} + #{$sage-switch-focus-outline-spacing * 2}));
      border: ($sage-switch-focus-outline-width * 1px) solid $sage-switch-focus-outline-color;
      border-radius: $sage-switch-border-radius;
      transition: opacity 0.15s ease-out 0.05s, transform 0.2s ease-in-out;
      pointer-events: none;
      opacity: 0;
    }

    &::after {  // switch toggle
      transform: translate3d(-100%, -50%, 0);
      height: $sage-switch-toggle-size;
      width: $sage-switch-toggle-size;
      background: sage-color(white);
      border-radius: sage-border(radius-round);
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.18), 0 1px 3px rgba(0, 0, 0, 0.1);
      transition: transform 0.2s ease-in-out;
    }

    &:invalid {
      background-color: sage-color(red);

      + .sage-switch__label {
        color: sage-color(red);
      }
    }

    // checked
    &:checked {
      color: $sage-switch-color-checked;
      background: $sage-switch-color-checked;

      &::after {
        transform: translate3d(0, -50%, 0);
      }
    }

    // disabled
    &:disabled {
      background: $sage-switch-color-disabled;
      cursor: not-allowed;

      &::after {
        box-shadow: none;
      }

      + label {
        color: $sage-switch-color-disabled-text;
        cursor: inherit;
      }

      // disabled & checked
      &:checked {
        background: $sage-switch-color-disabled-checked;

        + label {
          color: $sage-switch-color-disabled-checked-text;
        }
      }
    }

    &:focus:not(:disabled),
    &:active:not(:disabled) {
      &::before {
        transform: translate3d(-50%, -50%, 0);
        opacity: 1;
      }
    }
  }
}

